Corrected Header CSS
Not responsive yet

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,15 +4,16 @@
 }
 
 .logo-menu {
-    width: 147px;
-    padding-top: 20px;
+    width: 120px;
+    padding-top: 10px;
 }
 
 .main-menu {
     font-family: Myriad Pro;
     display: inline-block;
     font-size: 13.5px;
-    padding-top: 40px;
+    padding-top: 25px;
+    padding-bottom: 5px;
 }
 
 .menu-selection {
